# StackWise

./: .env.example  .gitignore  ARCHITECTURE.md  INSTALLATION_GUIDE.md  README.md  SOFTWARE_TEST_DOCUMENT.md  USER_MANUAL.md  docker-compose.yml
Backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 0001_initial_schema.py
Backend/app/: main.py
Backend/app/api/: routes.py
Backend/app/architecture_engine/: engine.py
Backend/app/compatibility_engine/: engine.py
Backend/app/config/: settings.py
Backend/app/cost_engine/: engine.py
Backend/app/database/: session.py
Backend/app/feature_engine/: engine.py
Backend/app/knowledge_base/: seed.py
Backend/app/models/: entities.py
Backend/app/recommendation_engine/: engine.py
Backend/app/repositories/: store.py
Backend/app/schemas/: dto.py
Backend/app/services/: report_service.py
Backend/app/tests/: conftest.py  test_api.py
Database/: README.md
Database/seeds/: compatibility_rules.json  feature_rules.json  recommendation_rules.json  technologies.json
Frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts
Frontend/src/: index.css  main.tsx
Frontend/src/components/: ui.tsx
Frontend/src/constants/: questionnaire.ts
Frontend/src/layouts/: AppLayout.tsx
Frontend/src/pages/: HomePage.tsx  ProjectsPage.tsx  QuestionnairePage.test.tsx  QuestionnairePage.tsx  RecommendationPage.test.tsx  RecommendationPage.tsx  ReportPage.tsx  TechnologiesPage.tsx
Frontend/src/routes/: AppRoutes.tsx
(+3 files in other folders)
