[project]
name = "stackwise-backend"
version = "1.0.0"
description = "FastAPI backend for StackWise recommendation system"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.111.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.3.4",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0",
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
